// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CertificateItemDetails renders item with negative match, token and restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={false}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        <InlineHashString
          value={
            HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  83,
                  248,
                  238,
                  137,
                  68,
                  160,
                  18,
                  56,
                  224,
                  242,
                  101,
                  204,
                  177,
                  14,
                  136,
                  171,
                  140,
                  93,
                  202,
                  246,
                  57,
                  172,
                  15,
                  237,
                  126,
                  70,
                  4,
                  168,
                  208,
                  38,
                  238,
                  228,
                ],
              },
              "value": "Some description",
            }
          }
        />
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Restricted delivery:"
      md={12}
    >
      Yes
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Type:"
      md={4}
    >
      owner
    </CertificateCell>
    <CertificateCell
      label="Underlying Token ID:"
      md={8}
    >
      <pre>
        0x900edc98db53508e6742723988b872dd08cd09c2
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Issuance:"
    >
      <pre>
        1
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                83,
                248,
                238,
                137,
                68,
                160,
                18,
                56,
                224,
                242,
                101,
                204,
                177,
                14,
                136,
                171,
                140,
                93,
                202,
                246,
                57,
                172,
                15,
                237,
                126,
                70,
                4,
                168,
                208,
                38,
                238,
                228,
              ],
            },
            "value": "Some description",
          },
          "id": Hash {
            "_bytes": Uint8Array [
              154,
              174,
              187,
              189,
              63,
              143,
              230,
              81,
              184,
              126,
              131,
              99,
              4,
              85,
              167,
              10,
              67,
              150,
              76,
              105,
              145,
              7,
              123,
              180,
              80,
              191,
              26,
              62,
              210,
              210,
              92,
              204,
            ],
          },
          "restrictedDelivery": true,
          "token": Object {
            "id": HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  140,
                  18,
                  163,
                  42,
                  199,
                  251,
                  91,
                  189,
                  217,
                  156,
                  212,
                  103,
                  80,
                  0,
                  135,
                  101,
                  247,
                  223,
                  236,
                  76,
                  174,
                  113,
                  250,
                  182,
                  46,
                  213,
                  2,
                  234,
                  3,
                  187,
                  76,
                  138,
                ],
              },
              "value": "0x900edc98db53508e6742723988b872dd08cd09c2",
            },
            "issuance": 1n,
            "type": HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  76,
                  16,
                  41,
                  105,
                  126,
                  227,
                  88,
                  113,
                  93,
                  58,
                  20,
                  162,
                  173,
                  216,
                  23,
                  196,
                  176,
                  22,
                  81,
                  68,
                  13,
                  232,
                  8,
                  55,
                  31,
                  120,
                  22,
                  90,
                  201,
                  13,
                  197,
                  129,
                ],
              },
              "value": "owner",
            },
          },
        }
      }
    />
  </Row>
</React.Fragment>
`;

exports[`CertificateItemDetails renders item with positive match, token and restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={true}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        <InlineHashString
          value={
            HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  83,
                  248,
                  238,
                  137,
                  68,
                  160,
                  18,
                  56,
                  224,
                  242,
                  101,
                  204,
                  177,
                  14,
                  136,
                  171,
                  140,
                  93,
                  202,
                  246,
                  57,
                  172,
                  15,
                  237,
                  126,
                  70,
                  4,
                  168,
                  208,
                  38,
                  238,
                  228,
                ],
              },
              "value": "Some description",
            }
          }
        />
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Restricted delivery:"
      md={12}
    >
      Yes
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Type:"
      md={4}
    >
      owner
    </CertificateCell>
    <CertificateCell
      label="Underlying Token ID:"
      md={8}
    >
      <pre>
        0x900edc98db53508e6742723988b872dd08cd09c2
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Issuance:"
    >
      <pre>
        1
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                83,
                248,
                238,
                137,
                68,
                160,
                18,
                56,
                224,
                242,
                101,
                204,
                177,
                14,
                136,
                171,
                140,
                93,
                202,
                246,
                57,
                172,
                15,
                237,
                126,
                70,
                4,
                168,
                208,
                38,
                238,
                228,
              ],
            },
            "value": "Some description",
          },
          "id": Hash {
            "_bytes": Uint8Array [
              154,
              174,
              187,
              189,
              63,
              143,
              230,
              81,
              184,
              126,
              131,
              99,
              4,
              85,
              167,
              10,
              67,
              150,
              76,
              105,
              145,
              7,
              123,
              180,
              80,
              191,
              26,
              62,
              210,
              210,
              92,
              204,
            ],
          },
          "restrictedDelivery": true,
          "token": Object {
            "id": HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  140,
                  18,
                  163,
                  42,
                  199,
                  251,
                  91,
                  189,
                  217,
                  156,
                  212,
                  103,
                  80,
                  0,
                  135,
                  101,
                  247,
                  223,
                  236,
                  76,
                  174,
                  113,
                  250,
                  182,
                  46,
                  213,
                  2,
                  234,
                  3,
                  187,
                  76,
                  138,
                ],
              },
              "value": "0x900edc98db53508e6742723988b872dd08cd09c2",
            },
            "issuance": 1n,
            "type": HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  76,
                  16,
                  41,
                  105,
                  126,
                  227,
                  88,
                  113,
                  93,
                  58,
                  20,
                  162,
                  173,
                  216,
                  23,
                  196,
                  176,
                  22,
                  81,
                  68,
                  13,
                  232,
                  8,
                  55,
                  31,
                  120,
                  22,
                  90,
                  201,
                  13,
                  197,
                  129,
                ],
              },
              "value": "owner",
            },
          },
        }
      }
    />
  </Row>
</React.Fragment>
`;

exports[`CertificateItemDetails renders item with undefined match, no token and hidden restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={false}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        <InlineHashString
          value={
            HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  83,
                  248,
                  238,
                  137,
                  68,
                  160,
                  18,
                  56,
                  224,
                  242,
                  101,
                  204,
                  177,
                  14,
                  136,
                  171,
                  140,
                  93,
                  202,
                  246,
                  57,
                  172,
                  15,
                  237,
                  126,
                  70,
                  4,
                  168,
                  208,
                  38,
                  238,
                  228,
                ],
              },
              "value": "Some description",
            }
          }
        />
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                83,
                248,
                238,
                137,
                68,
                160,
                18,
                56,
                224,
                242,
                101,
                204,
                177,
                14,
                136,
                171,
                140,
                93,
                202,
                246,
                57,
                172,
                15,
                237,
                126,
                70,
                4,
                168,
                208,
                38,
                238,
                228,
              ],
            },
            "value": "Some description",
          },
          "id": Hash {
            "_bytes": Uint8Array [
              154,
              174,
              187,
              189,
              63,
              143,
              230,
              81,
              184,
              126,
              131,
              99,
              4,
              85,
              167,
              10,
              67,
              150,
              76,
              105,
              145,
              7,
              123,
              180,
              80,
              191,
              26,
              62,
              210,
              210,
              92,
              204,
            ],
          },
          "restrictedDelivery": false,
          "token": undefined,
        }
      }
    />
  </Row>
</React.Fragment>
`;

exports[`CertificateItemDetails renders item with undefined match, no token and no restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={false}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        <InlineHashString
          value={
            HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  83,
                  248,
                  238,
                  137,
                  68,
                  160,
                  18,
                  56,
                  224,
                  242,
                  101,
                  204,
                  177,
                  14,
                  136,
                  171,
                  140,
                  93,
                  202,
                  246,
                  57,
                  172,
                  15,
                  237,
                  126,
                  70,
                  4,
                  168,
                  208,
                  38,
                  238,
                  228,
                ],
              },
              "value": "Some description",
            }
          }
        />
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Restricted delivery:"
      md={12}
    >
      No
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                83,
                248,
                238,
                137,
                68,
                160,
                18,
                56,
                224,
                242,
                101,
                204,
                177,
                14,
                136,
                171,
                140,
                93,
                202,
                246,
                57,
                172,
                15,
                237,
                126,
                70,
                4,
                168,
                208,
                38,
                238,
                228,
              ],
            },
            "value": "Some description",
          },
          "id": Hash {
            "_bytes": Uint8Array [
              154,
              174,
              187,
              189,
              63,
              143,
              230,
              81,
              184,
              126,
              131,
              99,
              4,
              85,
              167,
              10,
              67,
              150,
              76,
              105,
              145,
              7,
              123,
              180,
              80,
              191,
              26,
              62,
              210,
              210,
              92,
              204,
            ],
          },
          "restrictedDelivery": false,
          "token": undefined,
        }
      }
    />
  </Row>
</React.Fragment>
`;

exports[`CertificateItemDetails renders item with undefined match, token and restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={false}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        <InlineHashString
          value={
            HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  83,
                  248,
                  238,
                  137,
                  68,
                  160,
                  18,
                  56,
                  224,
                  242,
                  101,
                  204,
                  177,
                  14,
                  136,
                  171,
                  140,
                  93,
                  202,
                  246,
                  57,
                  172,
                  15,
                  237,
                  126,
                  70,
                  4,
                  168,
                  208,
                  38,
                  238,
                  228,
                ],
              },
              "value": "Some description",
            }
          }
        />
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Restricted delivery:"
      md={12}
    >
      Yes
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Type:"
      md={4}
    >
      owner
    </CertificateCell>
    <CertificateCell
      label="Underlying Token ID:"
      md={8}
    >
      <pre>
        0x900edc98db53508e6742723988b872dd08cd09c2
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Issuance:"
    >
      <pre>
        1
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": Hash {
              "_bytes": Uint8Array [
                83,
                248,
                238,
                137,
                68,
                160,
                18,
                56,
                224,
                242,
                101,
                204,
                177,
                14,
                136,
                171,
                140,
                93,
                202,
                246,
                57,
                172,
                15,
                237,
                126,
                70,
                4,
                168,
                208,
                38,
                238,
                228,
              ],
            },
            "value": "Some description",
          },
          "id": Hash {
            "_bytes": Uint8Array [
              154,
              174,
              187,
              189,
              63,
              143,
              230,
              81,
              184,
              126,
              131,
              99,
              4,
              85,
              167,
              10,
              67,
              150,
              76,
              105,
              145,
              7,
              123,
              180,
              80,
              191,
              26,
              62,
              210,
              210,
              92,
              204,
            ],
          },
          "restrictedDelivery": true,
          "token": Object {
            "id": HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  140,
                  18,
                  163,
                  42,
                  199,
                  251,
                  91,
                  189,
                  217,
                  156,
                  212,
                  103,
                  80,
                  0,
                  135,
                  101,
                  247,
                  223,
                  236,
                  76,
                  174,
                  113,
                  250,
                  182,
                  46,
                  213,
                  2,
                  234,
                  3,
                  187,
                  76,
                  138,
                ],
              },
              "value": "0x900edc98db53508e6742723988b872dd08cd09c2",
            },
            "issuance": 1n,
            "type": HashString {
              "hash": Hash {
                "_bytes": Uint8Array [
                  76,
                  16,
                  41,
                  105,
                  126,
                  227,
                  88,
                  113,
                  93,
                  58,
                  20,
                  162,
                  173,
                  216,
                  23,
                  196,
                  176,
                  22,
                  81,
                  68,
                  13,
                  232,
                  8,
                  55,
                  31,
                  120,
                  22,
                  90,
                  201,
                  13,
                  197,
                  129,
                ],
              },
              "value": "owner",
            },
          },
        }
      }
    />
  </Row>
</React.Fragment>
`;
